1.2.3dev: Fix wiki formatting hint not visible when toolbars disabled
Refs #12875.


git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/1.2-stable@16175 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -284,13 +284,13 @@ label[for=comment] { float: right }
  box-sizing: border-box;
  width: 100%;
 }
-#properties { white-space: nowrap; line-height: 160%; padding: 1em }
+#properties { line-height: 160%; padding: 1em }
 #properties table.trac-properties > tbody > tr > th,
 #properties table.trac-properties > colgroup > col.th {
+ overflow: hidden;
  padding: .4em;
  text-align: right;
  vertical-align: middle;
- white-space: normal;
  width: 17%;
 }
 #properties table.trac-properties > tbody > tr > th.col2 { border-left: 1px dotted #d7d7d7 }
